<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Book_Heart" >

    <ScrollView
        android:id="@+id/mm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout android:layout_width="match_parent" 
            android:weightSum="3.5"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lvpf"
                  android:gravity="center"
                  android:padding="5dp"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                                          android:gravity="center"
                        
                        android:id="@+id/book8_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="@string/call"
                        android:textSize="20sp" />

                    <TextView
                                          android:gravity="center"
                        
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="@string/chat"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2" >

                <ImageButton
                    android:id="@+id/book1_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/phone" />

                <ImageButton
                    android:id="@+id/book1_chat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/jj" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2.5" >

                <TextView
                    android:id="@+id/book2_txt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/nn"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/stringgg"
                    android:padding="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:orientation="vertical"
               android:weightSum="4" >

               <TextView
                   android:id="@+id/textView1"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight=".5"
                   android:gravity="center"
                   android:hint="@string/book"
                   android:paddingTop="10dp"
                   android:textSize="25sp" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_weight="1"
                   android:weightSum="1"
                   android:layout_height="wrap_content" >

                   <TextView
                       android:id="@+id/TextView01"
                       android:layout_weight=".2"
                       android:gravity="center"
                       android:padding="2dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/name" />

                   <EditText
                       android:id="@+id/book1_txtname"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight=".8"
                       android:ems="0"
                         android:layout_marginLeft="2dp"
                          android:hint="@string/name"
                       android:inputType="textPersonName"
                       android:padding="5dp" />

               </LinearLayout>

               <LinearLayout
                     android:layout_weight="1"
                   android:weightSum="1"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" >

                   <TextView
                       android:id="@+id/TextView02"
                       android:layout_weight=".2"
                       android:gravity="center"
                       android:padding="2dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/age" />

                   <EditText
                       android:id="@+id/book1_txtage"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight=".8"
                       android:ems="0"
                         android:layout_marginLeft="2dp"
                          android:hint="@string/age"
                       android:inputType="number"
                       android:padding="5dp" >

                       <requestFocus />
                   </EditText>
               </LinearLayout>

               <LinearLayout
                     android:layout_weight="1"
                   android:weightSum="1"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" >

                   <TextView
                       android:id="@+id/TextView03"
                       android:layout_weight=".2"
                       android:gravity="center"
                       android:padding="2dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/city2" />
<EditText
                       android:id="@+id/book1_txtcity"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight=".8"
                       android:ems="0"
                       android:layout_marginLeft="2dp"
                       android:hint="@string/city"
                       android:inputType="textAutoComplete"
                       android:padding="5dp" >

                       <requestFocus />
                   </EditText>

               </LinearLayout>

               <Button
                   android:id="@+id/book1_buttonsend"
                   android:layout_weight=".5"
                   android:gravity="center"
                    android:padding="5dp"
                    android:paddingTop="25dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/submet" />

           </LinearLayout>
            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
