<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#696969"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context=".Second" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="2dp"
        android:text="@string/spical"
        android:textColor="@android:color/white" />

    <Spinner
        android:id="@+id/sp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      
        android:layout_weight="1"
        android:background="#A9A9A9"
        android:padding="10dp"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="2dp"
        android:text="@string/doc"
        android:textColor="@android:color/white" />

    <Spinner
        android:id="@+id/sp3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#A9A9A9"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:visibility="visible" />

    <TextView
        android:id="@+id/book2_txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
           android:padding="2dp"
           android:visibility="invisible"
        android:textColor="@android:color/white"
        android:text="@string/city" />

    <Button
        android:id="@+id/sp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#A9A9A9"
        android:padding="10dp"
        android:text="Submit"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        />

</LinearLayout>